@@ -55,10 +55,10 @@ class ScanPosts(PostScanner):
                 self.site.config['post_pages']:
             if not self.site.quiet:
                 print(".", end='', file=sys.stderr)
+            destination_translatable = utils.TranslatableSetting('destination', destination, self.site.config['TRANSLATIONS'])
             dirname = os.path.dirname(wildcard)
             for dirpath, _, _ in os.walk(dirname, followlinks=True):
-                dest_dir = os.path.normpath(os.path.join(destination,
-                                            os.path.relpath(dirpath, dirname)))  # output/destination/foo/
+                rel_dest_dir = os.path.relpath(dirpath, dirname)
                 # Get all the untranslated paths
                 dir_glob = os.path.join(dirpath, os.path.basename(wildcard))  # posts/foo/*.rst
                 untranslated = glob.glob(dir_glob)
@@ -93,11 +93,12 @@ class ScanPosts(PostScanner):
                         post = Post(
                             base_path,
                             self.site.config,
-                            dest_dir,
+                            rel_dest_dir,
                             use_in_feeds,
                             self.site.MESSAGES,
                             template_name,
-                            self.site.get_compiler(base_path)
+                            self.site.get_compiler(base_path),
+                            destination_base=destination_translatable
                         )
                         timeline.append(post)
                     except Exception as err:
